feat: add jetbrains vmoptions creator capabilities